update Scrapy version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# we support scrapy dev version from github
-https://github.com/scrapy/scrapy/archive/0dce2834599d6c7417b780d2051d26490398e766.zip#egg=Scrapy
+Scrapy==1.0.0rc1
 service-identity==1.0.0
 demjson
