--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
 -r requirements.txt
 
 fabric
-requests
-mock
-pytest
-pytest-cov
-port-for
+requests==2.9.1
+mock==1.3.0
+pytest==2.9.1
+pytest-cov==2.2.1
+port-for==0.3.1
