[resources] make test_root_resource pass under python3

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [tox]
-envlist = py27
+envlist = py27,py35
 
 [testenv]
 deps = -rrequirements-dev.txt
-commands = py.test tests
+commands = py.test {posargs}
+
+[testenv:py35]
+basepython = python3.5
