--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
-python: 2.7
-env:
-- TOXENV=py27
 install:
   - pip install -U tox
+matrix:
+  include:
+     - python: 2.7
+       env: TOXENV=py27
+     - python: 3.5
+       env: TOXENV=py35
+
 script: tox
