--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,17 @@
 [tox]
-envlist = py27,py35
+envlist = py27,py35,scrapy10
 
 [testenv]
-deps = -rrequirements-dev.txt
+deps =
+    -rrequirements.txt
+    -rrequirements-dev.txt
 commands = py.test {posargs}
 
 [testenv:py35]
 basepython = python3.5
+
+[testenv:scrapy10]
+basepython = python2.7
+deps =
+    -rrequirements-dev.txt
+    scrapy==1.0.0
