--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,14 @@ matrix:
        env: TOXENV=scrapy10
 
 script: tox
+
+deploy:
+  provider: pypi
+  user: scrapinghub
+  password:
+    secure: RBETqFS52ylswbPVF8h7NmkK/bJWnukZw1QgiAIhA5YHwBfWw/U2N6HHHR0sCH6vmm8uWuNZc2nJVmCX0x/fXXLYRAhCYXdXvui+eSYDDB9eAgV7MVA2kF0V4/9jg0x/IYD2p5/YxP2jXa1zDtLt1p450BQu6UPjsCchfiYteyY=
+  on:
+    tags: true
+    condition: $TOXENV == py27 && $TRAVIS_TAG =~ ^[0-9]+[.][0-9]+[.][0-9]+(rc[0-9]+|[.]dev[0-9]+)?$
+    distributions: sdist bdist_wheel
+    repo: scrapinghub/scrapyrt
