Test with Python 3.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ matrix:
   include:
      - python: 2.7
        env: TOXENV=py27
+     - python: 2.7
+       env: TOXENV=py27-scrapy1.0.x
      - python: 3.5
        env: TOXENV=py35
-     - python: 2.7
-       env: TOXENV=scrapy10
+     - python: 3.6
+       env: TOXENV=py36
 
 script: tox
 
