--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,13 @@
 [tox]
-envlist = py27,py35,scrapy10
+envlist = py27, py27-scrapy1.0.x, py35, py36
 
 [testenv]
 deps =
-    -rrequirements.txt
-    -rrequirements-dev.txt
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-dev.txt
 commands = py.test {posargs}
 
-[testenv:py35]
-basepython = python3.5
-
-[testenv:scrapy10]
-basepython = python2.7
+[testenv:py27-scrapy1.0.x]
 deps =
-    -rrequirements-dev.txt
-    scrapy==1.0.0
+    Scrapy<1.1
+    -r{toxinidir}/requirements-dev.txt
