Use tox's generative envlist

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,10 @@
 [tox]
-envlist = py27, py27-scrapy1.0.x, py35, py36
+envlist = py27, py27-scrapy{1.0,1.1,1.2}, py35, py36, {py35,py36}-scrapy{1.1,1.2}
 
 [testenv]
 deps =
-    -r{toxinidir}/requirements.txt
+    scrapy1.0: Scrapy>=1.0,<1.1
+    scrapy1.1: Scrapy>=1.1,<1.2
+    scrapy1.2: Scrapy>=1.2,<1.3
     -r{toxinidir}/requirements-dev.txt
 commands = py.test {posargs}
-
-[testenv:py27-scrapy1.0.x]
-deps =
-    Scrapy<1.1
-    -r{toxinidir}/requirements-dev.txt
