--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,19 @@ matrix:
      - python: 2.7
        env: TOXENV=py27
      - python: 2.7
-       env: TOXENV=py27-scrapy1.0.x
+       env: TOXENV=py27-scrapy1.0
+     - python: 2.7
+       env: TOXENV=py27-scrapy1.1
+     - python: 2.7
+       env: TOXENV=py27-scrapy1.2
      - python: 3.5
        env: TOXENV=py35
      - python: 3.6
        env: TOXENV=py36
-
+     - python: 3.6
+       env: TOXENV=py36-scrapy1.1
+     - python: 3.6
+       env: TOXENV=py36-scrapy1.2
 script: tox
 
 deploy:
