--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
-bumpversion==0.5.3
-fabric
 requests==2.22.0
 mock==1.3.0
-pytest==2.9.1
-pytest-cov==2.2.1
 port-for==0.3.1
-Flask==1.1.1
+Flask==1.1.2
+pytest==6.2.1
+pytest-cov==2.11.1
+requests==2.25.1
+bumpversion==0.6.0
