/tox/ stop supporting Python 2.7, +support recent Scrapy

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py27-scrapy{1.5,1.6}, py35, py36, {py35,py36}-scrapy{1.5,1.6}
+envlist = py37, py38, {py37,py38}-scrapy{2.3,2.4}
 
 [testenv]
 deps =
