--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+-r requirements.txt
 requests==2.22.0
 mock==1.3.0
 port-for==0.3.1
@@ -6,3 +7,4 @@ pytest==6.2.1
 pytest-cov==2.11.1
 requests==2.25.1
 bumpversion==0.6.0
+flake8==3.8.4
