--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        scrapy-version: ["2.5.1", "2.4.1", "2.3.0", "2.2.1", "2.1.0"]
 
     steps:
     - uses: actions/checkout@v2
@@ -21,9 +22,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+        scrapy-version: ${{ matrix.scrapy-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install scrapy==${{ matrix.scrapy-version}}
         pip install -r requirements-dev.txt
 #    - name: Lint with flake8
 #      run: |
