--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
-mock==1.3.0
-port-for==0.3.1
-Flask==1.1.2
-pytest==6.2.1
-requests==2.25.1
-bumpversion==0.6.0
-flake8==3.8.4
+mock
+port-for
+Flask
+pytest
+requests
+bumpversion
+flake8
