add compatibility with 2.10

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
-        scrapy-version: ["2.11"]
+        scrapy-version: ["2.11", "2.10"]
 
     steps:
     - uses: actions/checkout@v2
