--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Run tox
       run: |
         pip install -U tox
-        tox -e ${{ matrix.tox || "py" }}
+        tox -e ${{ matrix.tox || 'py' }}
