--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = min,py39,py310,py311,py312,py313
+envlist = pre-commit,mypy,min,py39,py310,py311,py312,py313
 
 [testenv]
 deps =
@@ -8,7 +8,23 @@ deps =
     port-for
     pytest
 commands =
-    pytest {posargs:}
+    pytest {posargs:-W error}
+
+[testenv:pre-commit]
+basepython = python3
+deps =
+    pre-commit
+commands =
+    pre-commit run {posargs:--all-files}
+
+[testenv:mypy]
+basepython = python3.9
+deps =
+    {[testenv]deps}
+    mypy==1.16.1
+    types-requests==2.32.4.20250611
+commands =
+    mypy {posargs:scrapyrt tests}
 
 [testenv:min]
 basepython = python3.9
