--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,10 @@ jobs:
     strategy:
       matrix:
         include:
+        - python-version: "3.13"
+          tox: "pre-commit"
+        - python-version: "3.9"
+          tox: "mypy"
         - python-version: "3.9"
           tox: "min"
         - python-version: "3.10"
