--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ basepython = python3.9
 deps =
     {[testenv]deps}
     Scrapy==2.10.0
+    packaging==14.0
     # https://github.com/scrapy/scrapy/pull/6634 (addressed in Scrapy 2.13.0)
     # DeprecationWarning: twisted.web.http.HTTPClient was deprecated in
     # Twisted 24.7.0: Use twisted.web.client.Agent instead.
