--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,24 @@
 [tox]
-envlist = pre-commit,mypy,min,py39,py310,py311,py312,py313
+envlist = pre-commit,mypy,min,py39,py310,py311,py312,py313,coverage
 
 [testenv]
 deps =
-    Flask
-    mock
-    port-for
-    pytest
+    Flask==3.1.1
+    mock==5.2.0
+    port-for==0.7.4
+    pytest==8.4.1
+    pytest-cov==6.2.1
 commands =
-    pytest {posargs:-W error}
+    pytest \
+    {posargs: \
+    --cov-config=pyproject.toml \
+    --cov=scrapyrt \
+    --cov-report= \
+    -W error \
+    tests \
+    }
+setenv =
+    COVERAGE_FILE = .coverage.{envname}
 
 [testenv:pre-commit]
 basepython = python3
@@ -31,8 +41,17 @@ basepython = python3.9
 deps =
     {[testenv]deps}
     Scrapy==2.10.0
-    packaging==14.0
+    packaging==20.0
     # https://github.com/scrapy/scrapy/pull/6634 (addressed in Scrapy 2.13.0)
     # DeprecationWarning: twisted.web.http.HTTPClient was deprecated in
     # Twisted 24.7.0: Use twisted.web.client.Agent instead.
     Twisted<24.7.0
+
+[testenv:coverage]
+changedir = {toxinidir}
+skip_install = true
+setenv =
+    COVERAGE_FILE =
+commands =
+    coverage combine
+    coverage report --skip-covered --show-missing --fail-under=100
