--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pre-commit,mypy,min,py39,py310,py311,py312,py313,coverage
+envlist = pre-commit,mypy,docs,twinecheck,min,py39,py310,py311,py312,py313,coverage
 
 [testenv]
 deps =
@@ -35,6 +35,22 @@ deps =
     types-requests==2.32.4.20250611
 commands =
     mypy {posargs:scrapyrt tests}
+
+[testenv:docs]
+changedir = docs
+deps =
+    -rdocs/requirements.txt
+commands =
+    sphinx-build -W -b html . {envtmpdir}/html
+
+[testenv:twinecheck]
+basepython = python3
+deps =
+    twine==6.1.0
+    build==1.2.2.post1
+commands =
+    python -m build --sdist
+    twine check dist/*
 
 [testenv:min]
 basepython = python3.9
