--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,10 @@ replace = 'release = "{new_version}"'
 
 [[tool.bumpversion.files]]
 filename = "docs/conf.py"
-search = 'version = "[0-9]+\\.[0-9]+"'
-replace = 'version = "{major}.{minor}"'
+parse = "(?P<major>\\d+)\.(?P<minor>\\d+)"
+serialize = "{major}.{minor}"
+search = 'version = "{current_version}"'
+replace = 'version = "{new_version}"'
 regex = true
 
 [tool.mypy]
