--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ replace = 'release = "{new_version}"'
 
 [[tool.bumpversion.files]]
 filename = "docs/conf.py"
-parse = "(?P<major>\\d+)\.(?P<minor>\\d+)"
+parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)"
 serialize = "{major}.{minor}"
 search = 'version = "{current_version}"'
 replace = 'version = "{new_version}"'
