--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pre-commit,mypy,docs,twinecheck,min,py39,py310,py311,py312,py313,coverage
+envlist = pre-commit,mypy,docs,twinecheck,min,py310,py311,py312,py313,coverage
 
 [testenv]
 deps =
@@ -8,6 +8,7 @@ deps =
     port-for==0.7.4
     pytest==8.4.1
     pytest-cov==6.2.1
+    requests==2.32.4
 commands =
     pytest \
     {posargs: \
@@ -56,12 +57,13 @@ commands =
 basepython = python3.9
 deps =
     {[testenv]deps}
-    Scrapy==2.10.0
+    Scrapy==2.7.0
     packaging==20.0
     # https://github.com/scrapy/scrapy/pull/6634 (addressed in Scrapy 2.13.0)
     # DeprecationWarning: twisted.web.http.HTTPClient was deprecated in
     # Twisted 24.7.0: Use twisted.web.client.Agent instead.
     Twisted<24.7.0
+
 
 [testenv:coverage]
 changedir = {toxinidir}
