--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,18 @@ jobs:
           tox: "pre-commit"
         - python-version: "3.9"
           tox: "mypy"
-        - python-version: "3.13"  # Keep in sync with .readthedocs.yml
-          tox: "docs"
         - python-version: "3.13"
-          tox: "twinecheck"
+          tox: "pylint"
         - python-version: "3.9"
           tox: "min"
         - python-version: "3.10"
         - python-version: "3.11"
         - python-version: "3.12"
         - python-version: "3.13"
+        - python-version: "3.13"  # Keep in sync with .readthedocs.yml
+          tox: "docs"
+        - python-version: "3.13"
+          tox: "twinecheck"
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
