--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pre-commit,mypy,docs,twinecheck,min,py310,py311,py312,py313,coverage
+envlist = pre-commit,mypy,pylint,min,py310,py311,py312,py313,docs,twinecheck,coverage
 
 [testenv]
 deps =
@@ -32,10 +32,18 @@ commands =
 basepython = python3.9
 deps =
     {[testenv]deps}
-    mypy==1.16.1
+    mypy==1.17.0
     types-requests==2.32.4.20250611
 commands =
     mypy {posargs:scrapyrt tests}
+
+[testenv:pylint]
+deps =
+    {[testenv]deps}
+    pylint==3.3.7
+    pylint-per-file-ignores==1.4.0
+commands =
+    pylint docs scrapyrt tests
 
 [testenv:docs]
 changedir = docs
